--- a/project/Libraries/DroidPlugin/AndroidManifest.xml
+++ b/project/Libraries/DroidPlugin/AndroidManifest.xml
@@ -182,7 +182,7 @@
 
 
     <uses-feature android:name="android.hardware.camera"/>
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="true"/>
 
     <application>
 
